...
            .clickable(
                interactionSource = remember { MutableInteractionSource() },
                indication = null,
                onClick = onIntroComplete,
            )
            .semantics {
                contentDescription = "Doomsy intro. Double tap to skip."
            },
    ) {
        Box(
            modifier = Modifier
                .align(Alignment.TopStart)
                .fillMaxSize()
...
